[project]
name = "agentgate"
version = "0.2.0"
description = "Local reliability proxy for AI agent tool calls — retry, circuit breaker, rate limit, schema validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "jjjkkll157" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: Proxy Servers",
]

dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "httpx>=0.28.0,<0.29",
    "pyyaml>=6.0,<7",
    "structlog>=24.0,<25",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/jjjkkll157/agentgate"
Repository = "https://github.com/jjjkkll157/agentgate"
Issues = "https://github.com/jjjkkll157/agentgate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-httpx>=0.35,<1",
]

[project.scripts]
agentgate = "agentgate.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentgate*"]
